--- a/GameLogin/Views/Events/Delete.cshtml
+++ b/GameLogin/Views/Events/Delete.cshtml
@@ -25,6 +25,13 @@
     </div>
 
     <div class="display-label">
+        @Html.DisplayNameFor(model => model.EventPassword)
+    </div>
+    <div class="display-field">
+        @Html.DisplayFor(model => model.EventPassword)
+    </div>
+
+    <div class="display-label">
          @Html.DisplayNameFor(model => model.NoticesTemp)
     </div>
     <div class="display-field">
