--- a/GameLogin/Views/Events/Details.cshtml
+++ b/GameLogin/Views/Events/Details.cshtml
@@ -24,6 +24,13 @@
     </div>
 
     <div class="display-label">
+        @Html.DisplayNameFor(model => model.EventPassword)
+    </div>
+    <div class="display-field">
+        @Html.DisplayFor(model => model.EventPassword)
+    </div>
+
+    <div class="display-label">
          @Html.DisplayNameFor(model => model.NoticesTemp)
     </div>
     <div class="display-field">
