--- a/GameLogin/Views/Events/Edit.cshtml
+++ b/GameLogin/Views/Events/Edit.cshtml
@@ -32,6 +32,14 @@
         </div>
 
         <div class="editor-label">
+            @Html.LabelFor(model => model.EventPassword)
+        </div>
+        <div class="editor-field">
+            @Html.EditorFor(model => model.EventPassword)
+            @Html.ValidationMessageFor(model => model.EventPassword)
+        </div>
+
+        <div class="editor-label">
             @Html.LabelFor(model => model.NoticesTemp)
         </div>
         <div class="editor-field">
