--- a/GameLogin/Views/Events/Index.cshtml
+++ b/GameLogin/Views/Events/Index.cshtml
@@ -41,6 +41,9 @@
                 @Html.DisplayNameFor(model => model.EventDate)
             </th>
             <th>
+                @Html.DisplayNameFor(model => model.EventPassword)
+            </th>
+            <th>
                 @Html.DisplayNameFor(model => model.NoticesTemp)
             </th>
             <th>
@@ -72,6 +75,9 @@
                 </td>
                 <td>
                     @Html.DisplayFor(modelItem => item.EventDate)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.EventPassword)
                 </td>
                 <td>
                     @Html.DisplayFor(modelItem => item.NoticesTemp)
