--- a/GameLogin/Views/HomeLogin/Index.cshtml
+++ b/GameLogin/Views/HomeLogin/Index.cshtml
@@ -131,6 +131,7 @@
     <div style="margin-top:2000px">
         @using (Html.BeginForm("Home", "Admins"))
         {
+            @Html.Hidden("leagueName", Model.Item2.LeagueName)
             @Html.TextBox("adminpass");
             <input type="submit" value="Admin" />
         }
