--- a/GameLogin/Views/Shared/_Layout.cshtml
+++ b/GameLogin/Views/Shared/_Layout.cshtml
@@ -20,7 +20,7 @@
                     
                     <section id="login">
                         @Html.Partial("_LoginPartial")
-                    </section>
+                    </section>-->
                     <nav>
                         <ul id="menu">
                             <li>@Html.ActionLink("Home", "Index", "Home")</li>
@@ -33,7 +33,7 @@
                             <li>@Html.ActionLink("Events", "Index", "Events")</li>
                         </ul>
                     </nav>
-                </div>
+ <!--           </div>
             </div>
         </header>
         -->
