--- a/GameLogin/Views/Admins/Roster.cshtml
+++ b/GameLogin/Views/Admins/Roster.cshtml
@@ -1,5 +1,65 @@
 ﻿@{
     ViewBag.Title = "Roster";
+    List<SelectListItem> listItemSpare = new List<SelectListItem>();
+    List<SelectListItem> listItemMax = new List<SelectListItem>();
+
+    listItemSpare.Add(new SelectListItem
+    {
+        Text = "Never",
+        Value = "Never",
+        Selected = true
+    });
+    listItemSpare.Add(new SelectListItem
+    {
+        Text = "On Game Day",
+        Value = "OnGameDay"
+    });
+    listItemSpare.Add(new SelectListItem
+    {
+        Text = "1 Day prior",
+        Value = "OneDay"
+    });
+    listItemSpare.Add(new SelectListItem
+    {
+        Text = "2 Days prior",
+        Value = "TwoDays"
+    });
+    listItemSpare.Add(new SelectListItem
+    {
+        Text = "3 Days prior",
+        Value = "ThreeDay"
+    });
+    listItemSpare.Add(new SelectListItem
+    {
+        Text = "Always",
+        Value = "Always"
+    });
+
+    bool selected = false;
+    for (int i = 0; i < 500; i++)
+    {
+        if (!selected)
+        {
+            listItemMax.Add(new SelectListItem
+            {
+                Text = string.Format("{0}", @i),
+                Value = string.Format("{0}", @i),
+                Selected = true
+            });
+            selected = true;
+        }
+        else
+        {
+            listItemMax.Add(new SelectListItem
+            {
+                Text = string.Format("{0}", @i),
+                Value = string.Format("{0}", @i),
+            });
+        }
+    }
+
+
+
 }
 
 <div style="width:100%; background-color:#1e1e1e;">
@@ -20,6 +80,7 @@
     </div>
 </div>
 
+
 <section class="system_roster_header" style="text-align:center">
     <div class="system_roster_content_wrapper">
         <hgroup class="title">
@@ -27,71 +88,76 @@
             <h2 style="color:#000000"><b>System Roster Configuration</b></h2>
         </hgroup>
         <div style="margin:0 auto; text-align:center;">
-            <div>
-                <asp:Button id="system_roster_btn_edit_player" runat="server" Text="Remove/Replace Player from Playing List" style="margin:10px 0px" />
-            </div>
-            <div>
-                <asp:Button id="system_roster_btn_view_history" runat="server" Text="View History of Game Rosters" style="margin:10px 0px" />
-            </div>
-            <div>
-                <asp:Button id="system_roster_btn_setup_line" runat="server" Text="Setup Lines and Print" style="margin:10px 0px" />
-            </div>
+            @using (Html.BeginForm("RemoveReplacePlayer", "Admin"))
+            {
+                <input type="submit" value="Remove/Replace Player from Playing List" />
+            }
+            <br />
+            @using (Html.BeginForm("History", "Admin"))
+            {
+                <input type="submit" value="View History of Game Rosters" />
+            }
+            <br />
+            @using (Html.BeginForm("SetupLines", "Admin"))
+            {
+                <input type="submit" value="Setup Lines and Print" />
+            }
         </div>
-        <br />
-        <br />
     </div>
 </section>
 
 <div id="system_roster_wrapper" style="width:900px;margin:0 auto;">
     <div id="system_roster_left_column" style="width:300px;align-text:center; float:left;">
-        <h3>Spares can Login:</h3>
-        <br />
-        <asp:DropDownList id="system_roster_dd_spare" runat="server">
-            <asp:listitem>Never</asp:listitem>
-            <asp:listitem>On Game Day</asp:listitem>
-            <asp:listitem>1 Day prior</asp:listitem>
-            <asp:listitem>2 Days prior</asp:listitem>
-            <asp:listitem>3 Days prior</asp:listitem>
-            <asp:listitem>Always</asp:listitem>
-        </asp:DropDownList>
-        <br />
-        <asp:Button id="system_roster_btn_spare_update" Text="Enter" runat="server" style="margin:10px 0px" />
-        <br />
-        <p>Spares names are not displayed on the main page until the system allows them to login.</p>
+        @using (Html.BeginForm("Temp", "Admin"))
+        {
+            <h3>Spares can Login:</h3>
+            <br />
+            @Html.DropDownList("system_roster_dd_spare", new SelectList(listItemSpare, "Value", "Text"))
+            <br />
+            <br />
+            <input type="submit" value="Enter" />
+            <br />
+            <p>Spares names are not displayed on the main page until the system allows them to login.</p>
+        }
     </div>
     <div id="system_roster_center_column" style="width:300px;align-text:center;float:left;">
-        <h3>Newcomers can Login:</h3>
-        <br />
-        <asp:RadioButtonList id="system_roster_radio_newcomers" runat="server">
-            <asp:listitem>Never</asp:listitem>
-            <asp:listitem>Themselves</asp:listitem>
-        </asp:RadioButtonList>
-        <br />
-        <asp:Button id="system_roster_btn_newcomers_update" Text="Update" runat="server" style="margin:10px 0px" />
-        <br />
-        <p>
-            This function allows your players to login new players(not on your roster) for
-            the next game without involving you but you must edit their profile to add the
-            email address.
-        </p>
+        @using (Html.BeginForm("Temp", "Admin"))
+        {
+            <h3>Newcomers can Login:</h3>
+            <br />
+            @Html.RadioButton("Newcomer", "Never")<span>Never</span>
+            @Html.RadioButton("Newcomer", "Themselves")<span>Themselves</span>
+            <br />
+            <br />
+            <input type="submit" value="Update" />
+            <br />
+            <p>
+                This function allows your players to login new players(not on your roster) for
+                the next game without involving you but you must edit their profile to add the
+                email address.
+            </p>
+        }
     </div>
     <div id="system_roster_right_column" style="width:300px;align-text:center;float:left;">
-        <h3>Maximum Players:</h3>
-        <br />
-        <p>
-            Your system will not allow others to login once the Maximum number of players
-            has been reached.  The list of those NOT PLAYING will not be displayed at
-            this time.
-        </p>
-        <asp:DropDownList id="system_roster_dd_max_players" runat="server">
-        </asp:DropDownList>
-        <br />
-        <asp:Button id="system_roster_btn_max_players_update" Text="Update" runat="server" style="margin:10px 0px" />
-        <br />
-        <p>
-            Change the setting to "0" if you wish to NOT use the player login functionality,
-            but still display the Game Date/Time and Announcements.
-        </p>
+        @using (Html.BeginForm("Temp", "Admin"))
+        {
+            <h3>Maximum Players:</h3>
+            <br />
+            <p>
+                Your system will not allow others to login once the Maximum number of players
+                has been reached.  The list of those NOT PLAYING will not be displayed at
+                this time.
+            </p>
+            @Html.DropDownList("system_roster_dd_maximum", new SelectList(@listItemMax, "Value", "Text"))
+            <br />
+            <br />
+            <input type="submit" value="Update" />
+            <br />
+            <p>
+                Change the setting to "0" if you wish to NOT use the player login functionality,
+                but still display the Game Date/Time and Announcements.
+            </p>
+        }
     </div>
 </div>
 <br />
