--- a/GameLogin/Views/Admins/Roster.cshtml
+++ b/GameLogin/Views/Admins/Roster.cshtml
@@ -79,11 +79,10 @@
         </table>
     </div>
 </div>
-
-
 <section class="system_roster_header" style="text-align:center">
     <div class="system_roster_content_wrapper">
         <hgroup class="title">
+            <h1 style="color:#000000"><b><%: Title %></b></h1>
             <h2 style="color:#000000"><b>System Roster Configuration</b></h2>
         </hgroup>
         <div style="margin:0 auto; text-align:center;">
