Fixed homelogin page renaming issue, and rerouting

--- a/GameLogin/Views/Home/Index.cshtml
+++ b/GameLogin/Views/Home/Index.cshtml
@@ -18,7 +18,7 @@
 
 <div style="text-align:center">
     <span style="font-weight:bold">Code:</span>
-    @using (Html.BeginForm("Index", "HomeLogin"))
+    @using (Html.BeginForm("Index", "Home"))
     {
         @Html.TextBox("pass"); 
         <input type="submit" value="Go"/>
